--- a/css/style.css
+++ b/css/style.css
@@ -169,10 +169,35 @@ footer{
 }
 
 @media screen and (max-width: 980px){
+    .nav-container{
+        width: 95%;
+        margin: 0 auto;
+    }
+
+    section{
+        width: 95%;
+    }
+
+    .tile{
+        width: 45%;
+    }
 
 }
 
 @media screen and (max-width: 768px){
+    .nav-container{
+        width: 95%;
+        margin: 0 auto;
+    }
+
+    section{
+        width: 95%;
+    }
+
+    .tile{
+        width: 50%;
+        margin-right: 0px;
+    }
 
 }
 
@@ -206,7 +231,6 @@ footer{
     
     .tile{
         width: 100%;
-        margin-right: 30px;
         margin-bottom: 50px;
     }
 }
